fix: add white space no wrap

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,9 @@ nav {
   line-height: normal;
   letter-spacing: -0.24px;
   margin: 0;
+  white-space: nowrap;
 }
+
 .nav-logo img {
   height: 2.4rem;
   width: 2.4rem;
@@ -66,6 +68,7 @@ nav {
   text-align: end;
   margin: 0;
 }
+
 .nav-contact button {
   width: 113px;
   background-color: var(--highlight-color);
@@ -86,6 +89,7 @@ nav {
 .nav-navigation li {
   list-style-type: none;
   text-align: center;
+  white-space: nowrap;
 }
 
 /* header main content */
